# docker-linux-cpp-opencv

./: .gitignore  Dockerfile  run.sh  run_all.sh
code/: CMakeLists.txt
code/app/: test1.cpp
code/include/: util.h
code/src/: util.cpp
